[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/EnemySpawner.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.96188, 8.06213, 2.10602 )

[node name="EnemySpawner" type="Spatial"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DisablingArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DisablingArea"]
shape = SubResource( 1 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="DisablingArea" to="." method="_on_DisablingArea_body_entered"]
[connection signal="body_exited" from="DisablingArea" to="." method="_on_DisablingArea_body_exited"]
